# data-science-project

./: .gitignore  README.md  pyproject.toml
data_science_project/boligpris/: crawler.py  main.py  scraper.py
guides/: Getting started with python.md
notebooks/: 00_overview.ipynb
notebooks/basic/: 01_strings.ipynb  02_numbers.ipynb  03_lists.ipynb  04_dictionaries.ipynb  05_boolean_comparisions.ipynb  06_for_loops.ipynb  06_if_else.ipynb  07_loops.ipynb  08_file_io.ipynb  09_functions.ipynb  std_lib.ipynb  venv.ipynb
notebooks/data_processing/: 01_pandas_intro.ipynb  02_basic_data_cleaning.ipynb  03_basic_NLP.ipynb  04_data_preprocessing.ipynb  05_Topic_Modelling.ipynb  06_Sentiment_Analysis.ipynb  utils.py
notebooks/data_processing/data/: anmeldelser.txt  titanic.csv  titanic_with_dub.csv
notebooks/data_retrieval/: 01_APIs.ipynb  02_Scraping.ipynb
notebooks/data_retrieval/data/: sample.html
notebooks/exercises/: data_preprocessing_excercise.ipynb  numbers_exercise.ipynb  pandas_intro_exercise.ipynb  strings_exercise.ipynb
notebooks/solutions/: conditionals_exercise_solution.ipynb  data_preprocessing_excercise_solution.ipynb  dictionaries_exercise_solution.ipynb  file_io_exercise.ipynb  for_loops_exercise_solution.ipynb  lists_exercise_solution.ipynb  numbers_exercise_solution.ipynb  pandas_intro_exercise_solution.ipynb  strings_exercise_solution.ipynb
python-project/: pyproject.toml
python-project/src/python_project/: test_commands.py
tests/: test_commands.py
